Move json.org from mmstudio to mmcorej
This actually would have always made sense; even more now that it has
been made clear that json.org is kept primarily as a legacy interface to
mmcorej, due to its use by TaggedImage.

Since mmstudio is for now a single module and depends on mmcorej,
json.org will always be available to it.

Note that we need to continue to "vendor" the json.org source code
(rather than depending on any version on Maven Central), or at least
that is the simplest thing to do, because the ancient version we use has
an incompatible interface with the currently available versions.

--- a/MMCoreJ_wrap/build.xml
+++ b/MMCoreJ_wrap/build.xml
@@ -1,23 +1,22 @@
 <project name="MMCoreJ" basedir="." default="jar">
 	<include file="../buildscripts/buildprops.xml"/>
-	<property name="srcdir" value="${mm.swig.javasrcdir}"/>
-	<property name="json.srcdir" value="${mm.basedir}/mmstudio/src/main/java"/>
+	<property name="gensrcdir" value="${mm.swig.javasrcdir}"/>
 	<property name="package" value="mmcorej"/>
 
 	<import file="../buildscripts/javabuild.xml"/>
 
 	<!-- Override mm.javabuild.compile -->
-	<target name="compile" depends="prepare" description="Compile Java sources">
+
+	<target name="compile-json-org-and-tagged-image" depends="prepare">
 		<mkdir dir="${intdir}"/>
+		<mm-javac srcdir="${srcdir}" destdir="${intdir}"/>
+	</target>
 
-		<copy todir="${srcdir}/${package}" file="TaggedImage.java"/>
-
-		<mm-javac destdir="${intdir}">
-			<src path="${json.srcdir}"/>
-			<include name="org/json/**"/>
-
-			<src path="${srcdir}"/>
-			<include name="${package}/**"/>
+	<target name="compile-swig-gensrc" depends="compile-json-org-and-tagged-image">
+		<mm-javac srcdir="${gensrcdir}" destdir="${intdir}">
+			<classpath refid="project.classpath"/>
 		</mm-javac>
 	</target>
+
+	<target name="compile" depends="compile-swig-gensrc" description="Compile Java sources"/>
 </project>
