Ditch Maven, use Gradle
Not only is it much nicer in general, but it has the capability to
replace all of our uses of Ant, and potentially more.

--- a/.gitignore
+++ b/.gitignore
@@ -81,3 +81,9 @@ test-reports/
 /MMCorePy_wrap/MMCorePy_wrap.h
 /DeviceAdapters/DirectElectron/src/DEMessaging/DEServer.pb.cc
 /DeviceAdapters/DirectElectron/src/DEMessaging/DEServer.pb.h
+
+# Gradle
+.gradle/
+gradle-app.setting
+!gradle-wrapper.jar
+.gradletasknamecache
