--- a/mmstudio/build.gradle
+++ b/mmstudio/build.gradle
@@ -1,5 +1,6 @@
 apply plugin: 'java'
 apply plugin: 'maven'
+apply plugin: 'maven-publish'
 
 group = 'org.micromanager'
 version = '2.0beta4-SNAPSHOT'
@@ -56,4 +57,15 @@ dependencies {
 
 javadoc {
    exclude '**/internal/**'
+}
+
+publishing {
+   publications {
+      mavenJava(MavenPublication) {
+         from components.java
+      }
+   }
+   repositories {
+      mavenLocal()
+   }
 }
