--- a/mmstudio/build.gradle
+++ b/mmstudio/build.gradle
@@ -1,17 +1,12 @@
+description = 'The Micro-Manager Application and Java API'
+
 apply plugin: 'java'
 apply plugin: 'maven'
-apply plugin: 'maven-publish'
 
-group = 'org.micromanager'
 version = '2.0beta4-SNAPSHOT'
-
-description = 'The Micro-Manager Application and Java API'
 
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
-tasks.withType(JavaCompile) {
-   options.encoding = 'UTF-8'
-}
 
 repositories {
    mavenLocal()
@@ -30,8 +25,7 @@ repositories {
 dependencies {
    annotationProcessor group: 'org.scijava', name: 'scijava-common', version:'2.69.0'
 
-   compile group: 'org.micromanager', name: 'mmcorej', version:'1.0-SNAPSHOT', classifier:'all'
-
+   compile project(path:':MMCoreJ_wrap:mmcorej', configuration:'shadow')
    compile group: 'bulenkov', name: 'iconloader', version:'1f4d8663f686a6195e4f694654d3f71405e6a04c'
    compile group: 'com.fifesoft', name: 'rsyntaxtextarea', version:'2.6.1'
    compile group: 'com.google.code.gson', name: 'gson', version:'2.8.0'
@@ -64,8 +58,5 @@ publishing {
       mavenJava(MavenPublication) {
          from components.java
       }
-   }
-   repositories {
-      mavenLocal()
    }
 }
