Build libraries/ with Gradle

--- a/settings.gradle
+++ b/settings.gradle
@@ -4,3 +4,6 @@ include 'MMCoreJ_wrap'
 include 'MMCoreJ_wrap:mmcorej'
 include 'MMCoreJ_wrap:taggedimage'
 include 'mmstudio'
+include 'libraries'
+include 'libraries:Big'
+include 'libraries:Projector'
