Reorganize autofocus Ant build
Make it work exactly like plugin/; we could in theory just move the
autofocus plugins into the standard plugin directory, but I won't do
that yet.

--- a/autofocus/Makefile.am
+++ b/autofocus/Makefile.am
@@ -11,7 +11,8 @@ mmautofocus_DATA = \
 autofocus.stamp:
 	@rm -f autofocus.tmp
 	@touch autofocus.tmp
-	$(ANT) -Dmm.javacflags="$(JAVACFLAGS)" $(ANTFLAGS) jar
+	$(ANT) -Dmm.javacflags="$(JAVACFLAGS)" $(ANTFLAGS) \
+		-Dautofocus.intdir="`pwd`/build" -Dautofocus.outdir="`pwd`" jar
 	@mv -f autofocus.tmp $@
 
 $(mmautofocus_DATA): autofocus.stamp
@@ -23,4 +24,4 @@ $(mmautofocus_DATA): autofocus.stamp
 CLEANFILES = autofocus.stamp
 
 clean-local:
-	$(ANT) $(ANTFLAGS) clean
+	$(ANT) $(ANTFLAGS) -Dautofocus.intdir="`pwd`/build" -Dautofocus.outdir="`pwd`" clean
