--- a/settings.gradle
+++ b/settings.gradle
@@ -6,4 +6,4 @@ include 'MMCoreJ_wrap:taggedimage'
 include 'mmstudio'
 include 'libraries'
 include 'libraries:Big'
-include 'libraries:Projector'
+include 'libraries:ProjectorLib'
