--- a/libraries/ProjectorLib/build.xml
+++ b/libraries/ProjectorLib/build.xml
@@ -1,3 +1,3 @@
-<project name="Projector" default="jar">
+<project name="ProjectorLib" default="jar">
 	<import file="../javalibrarybuild.xml"/>
 </project>
