Build plugins using Gradle
Note: MMClearVolumePlugin might be incomplete; need to fix its code to
check.

--- a/settings.gradle
+++ b/settings.gradle
@@ -3,7 +3,43 @@ rootProject.name = 'micro-manager'
 include 'MMCoreJ_wrap'
 include 'MMCoreJ_wrap:mmcorej'
 include 'MMCoreJ_wrap:taggedimage'
+
 include 'mmstudio'
+
 include 'libraries'
 include 'libraries:Big'
 include 'libraries:ProjectorLib'
+
+include 'autofocus'
+include 'autofocus:HardwareFocusExtender'
+include 'autofocus:MMAutofocus'
+include 'autofocus:MMAutofocusDuo'
+include 'autofocus:MMAutofocusTB'
+include 'autofocus:MMOughtaFocus'
+
+include 'plugins'
+include 'plugins:ASIdiSPIM'
+include 'plugins:AcquireMultipleRegions'
+include 'plugins:CRISP'
+include 'plugins:CRISPv2'
+include 'plugins:Duplicator'
+include 'plugins:FrameCombiner'
+include 'plugins:Gaussian'
+include 'plugins:HCS'
+include 'plugins:ImageFlipper'
+include 'plugins:IntelligentAcquisition'
+include 'plugins:MMClearVolumePlugin'
+include 'plugins:MultiAndor'
+include 'plugins:MultiChannelShading'
+include 'plugins:PipelineSaver'
+include 'plugins:Projector'
+include 'plugins:Recall'
+include 'plugins:SequenceBufferMonitor'
+include 'plugins:SlideExplorer'
+include 'plugins:SnapOnMove'
+include 'plugins:SplitView'
+include 'plugins:Tracker'
+include 'plugins:WhiteBalance'
+include 'plugins:ZProjector'
+include 'plugins:autolase'
+include 'plugins:pgFocus'
