Prioritize Bintray and Maven Central over imagej.net
Since imagej.net mirrors many of the artifacts; we want to pull what we
can from fast repositories.

--- a/build.gradle
+++ b/build.gradle
@@ -5,8 +5,9 @@ allprojects {
    group = 'org.micromanager'
 
    repositories {
-      maven { url 'https://maven.imagej.net/content/groups/public' }
+      jcenter()
       mavenCentral()
+      maven { url 'https://maven.imagej.net/content/groups/public' }
 
       // Jar committed to GitHub (for Bulenkov IconLoader)
       ivy {
