Update JVM flags for Unix launcher script
The Concurrent Mark-and-Sweep GC has better performance for a desktop
app (shorter pauses). These options should be applied to the Windows and
Mac builds, too.

--- a/buildscripts/launchers/mmimagej.in
+++ b/buildscripts/launchers/mmimagej.in
@@ -14,8 +14,12 @@
 # assumption it makes.
 cd "@imagejdir@"
 
-@JAVA@ -Xmx1024M \
-   -XX:MaxDirectMemorySize=1000G \
+@JAVA@ \
+   -Xmx1024M \
+   -XX:MaxDirectMemorySize=32G \
+   -XX:CICompilerCount=2 \
+   -XX:+UseConcMarkSweepGC -XX:MaxGCPauseMillis=66 \
+   -Dsun.java2d.dpiaware=false \
    -Dmmcorej.library.loading.stderr.log=yes \
    -Dorg.micromanager.corelog.dir=/tmp \
    -jar "@imagejjar@" \
