Build acqEngine with Gradle; remove obsolete code
Removing the unused Clojure sources was necessary to get the project to
build.

--- a/settings.gradle
+++ b/settings.gradle
@@ -6,6 +6,8 @@ include 'MMCoreJ_wrap:taggedimage'
 
 include 'mmstudio'
 
+include 'acqEngine'
+
 include 'libraries'
 include 'libraries:Big'
 include 'libraries:ProjectorLib'
