Collect distribution jars using Gradle

--- a/build.gradle
+++ b/build.gradle
@@ -24,3 +24,8 @@ allprojects {
       }
    }
 }
+
+ext {
+   distJarDir = project.file('dist/jars')
+   distPluginDir = project.file('dist/mmplugins')
+}
