--- a/acqEngine/build.gradle
+++ b/acqEngine/build.gradle
@@ -18,3 +18,8 @@ dependencies {
 compileClojure {
    options.aotCompile = true
 }
+
+task collectJars(type:Copy) {
+   from configurations.runtime
+   into project.distJarDir
+}
