--- a/autofocus/build.gradle
+++ b/autofocus/build.gradle
@@ -7,4 +7,14 @@ subprojects {
       compile project(':mmstudio')
       compile project(path:':MMCoreJ_wrap:mmcorej', configuration:'shadow')
    }
+
+   task collectJars(type:Copy) {
+      from configurations.runtime
+      into project.distJarDir
+   }
+
+   task collectPlugins(type:Copy) {
+      from libsDir
+      into project.distPluginDir
+   }
 }
