--- a/package/java/build.gradle
+++ b/package/java/build.gradle
@@ -14,3 +14,8 @@ task collectJars(type:Copy) {
    from configurations.runtime
    into project.distJarDir
 }
+
+clean {
+   delete project.distJarDir
+   delete project.distPluginDir
+}
