Eliminate Gradle shadow plugin
IDEs (NetBeans, IDEA) don't seem to like it.
taggedimage is now its own jar.

--- a/plugins/build.gradle
+++ b/plugins/build.gradle
@@ -5,7 +5,7 @@ subprojects {
       annotationProcessor project(':mmstudio')
 
       compile project(':mmstudio')
-      compile project(path:':MMCoreJ_wrap:mmcorej', configuration:'shadow')
+      compile project(':MMCoreJ_wrap:mmcorej')
 
       testCompile group:'junit', name:'junit', version:'4.12'
    }
