--- a/acqEngine/build.gradle
+++ b/acqEngine/build.gradle
@@ -10,7 +10,7 @@ repositories {
 }
 
 dependencies {
-   compile project(path:':MMCoreJ_wrap:mmcorej', configuration:'shadow')
+   compile project(':MMCoreJ_wrap:mmcorej')
    compile project(':mmstudio')
    compile group:'org.clojure', name:'clojure', version:'1.7.0'
 }
