--- a/mmstudio/build.gradle
+++ b/mmstudio/build.gradle
@@ -10,7 +10,7 @@ targetCompatibility = 1.8
 dependencies {
    annotationProcessor group:'org.scijava', name:'scijava-common', version:'2.69.0'
 
-   compile project(path:':MMCoreJ_wrap:mmcorej', configuration:'shadow')
+   compile project(':MMCoreJ_wrap:mmcorej')
    compile group:'bulenkov', name:'iconloader', version:'1f4d8663f686a6195e4f694654d3f71405e6a04c'
    compile group:'com.fifesoft', name:'rsyntaxtextarea', version:'2.6.1'
    compile group:'com.google.code.gson', name:'gson', version:'2.8.0'
@@ -48,14 +48,6 @@ jar {
 
 javadoc {
    exclude '**/internal/**'
-}
-
-publishing {
-   publications {
-      mavenJava(MavenPublication) {
-         from components.java
-      }
-   }
 }
 
 task collectJars(type:Copy) {
