Gradle: convert MMCoreJ_wrap to java-library

--- a/MMCoreJ_wrap/mmcorej/build.gradle
+++ b/MMCoreJ_wrap/mmcorej/build.gradle
@@ -1,5 +1,5 @@
 description = 'The SWIG-generated wrappers for MMCore'
 
 dependencies {
-   compile project(':MMCoreJ_wrap:taggedimage')
+   api project(':MMCoreJ_wrap:taggedimage')
 }
