--- a/MMCoreJ_wrap/build.gradle
+++ b/MMCoreJ_wrap/build.gradle
@@ -3,7 +3,8 @@ allprojects  {
 }
 
 subprojects {
-   apply plugin:'java'
+   apply plugin:'java-library'
+
    // MMCoreJ remains Java 6 compatible, for use by MM 1.x
    sourceCompatibility = 1.6
    targetCompatibility = 1.6
