Gradle: convert most Java projects to java-library

--- a/plugins/Gaussian/build.gradle
+++ b/plugins/Gaussian/build.gradle
@@ -1,3 +1,3 @@
 dependencies {
-   compile group:'edu.ucsf.valelab.tsf', name:'tsfproto', version:'1.0.0'
+   implementation group:'edu.ucsf.valelab.tsf', name:'tsfproto', version:'1.0.0'
 }
