--- a/plugins/MMClearVolumePlugin/build.gradle
+++ b/plugins/MMClearVolumePlugin/build.gradle
@@ -3,8 +3,9 @@ repositories {
 }
 
 dependencies {
-   compile group:'net.clearvolume', name:'clearvolume', version:'1.4.1'
+   implementation group:'net.clearvolume', name:'clearvolume', version:'1.4.1'
 
+   // TODO Select based on build platform
    runtime group:'org.jogamp.gluegen', name:'gluegen-rt', version:'2.3.2', classifier:'natives-linux-amd64'
    runtime group:'org.jogamp.gluegen', name:'gluegen-rt', version:'2.3.2', classifier:'natives-linux-i586'
    runtime group:'org.jogamp.gluegen', name:'gluegen-rt', version:'2.3.2', classifier:'natives-macosx-universal'
