--- a/plugins/build.gradle
+++ b/plugins/build.gradle
@@ -1,11 +1,11 @@
 subprojects {
-   apply plugin:'java'
+   apply plugin:'java-library'
 
    dependencies {
       annotationProcessor project(':mmstudio')
 
-      compile project(':mmstudio')
-      compile project(':MMCoreJ_wrap:mmcorej')
+      implementation project(':mmstudio')
+      implementation project(':MMCoreJ_wrap:mmcorej')
 
       testCompile group:'junit', name:'junit', version:'4.12'
    }
