--- a/acqEngine/build.gradle
+++ b/acqEngine/build.gradle
@@ -12,6 +12,7 @@ repositories {
 dependencies {
    compile project(':MMCoreJ_wrap:mmcorej')
    compile project(':mmstudio')
+   compile group:'net.imagej', name:'ij', version:'1.51g'
    compile group:'org.clojure', name:'clojure', version:'1.7.0'
 }
 
