--- a/mmstudio/build.gradle
+++ b/mmstudio/build.gradle
@@ -1,6 +1,6 @@
 description = 'The Micro-Manager Application and Java API'
 
-apply plugin:'application'
+apply plugin:'java-library'
 
 version = '2.0beta4-SNAPSHOT'
 
@@ -10,25 +10,26 @@ targetCompatibility = 1.8
 dependencies {
    annotationProcessor group:'org.scijava', name:'scijava-common', version:'2.69.0'
 
-   compile project(':MMCoreJ_wrap:mmcorej')
-   compile group:'bulenkov', name:'iconloader', version:'1f4d8663f686a6195e4f694654d3f71405e6a04c'
-   compile group:'com.fifesoft', name:'rsyntaxtextarea', version:'2.6.1'
-   compile group:'com.google.code.gson', name:'gson', version:'2.8.0'
-   compile group:'com.google.guava', name:'guava', version:'21.0'
-   compile group:'com.miglayout', name:'miglayout-swing', version:'4.2'
-   compile group:'net.imagej', name:'ij', version:'1.51g'
-   compile group:'net.imglib2', name:'imglib2', version:'4.6.1'
-   compile group:'ome', name:'formats-api', version:'5.8.0'
-   compile group:'org.apache-extras.beanshell', name:'bsh', version:'2.0b6'
-   compile group:'org.apache.commons', name:'commons-lang3', version:'3.7'
-   compile group:'org.apache.commons', name:'commons-math', version:'2.2'
-   compile group:'org.apache.commons', name:'commons-math3', version:'3.6.1'
-   compile group:'org.jfree', name:'jcommon', version:'1.0.24'
-   compile group:'org.jfree', name:'jfreechart', version:'1.0.19'
-   compile group:'org.openmicroscopy', name:'ome-xml', version:'5.6.2'
-   compile group:'org.scijava', name:'scijava-common', version:'2.69.0'
+   api project(':MMCoreJ_wrap:mmcorej')
+   api group:'com.google.guava', name:'guava', version:'21.0'
+   api group:'org.scijava', name:'scijava-common', version:'2.69.0'
 
-   testCompile group:'junit', name:'junit', version:'4.12'
+   implementation group:'bulenkov', name:'iconloader', version:'1f4d8663f686a6195e4f694654d3f71405e6a04c'
+   implementation group:'com.fifesoft', name:'rsyntaxtextarea', version:'2.6.1'
+   implementation group:'com.google.code.gson', name:'gson', version:'2.8.0'
+   implementation group:'com.miglayout', name:'miglayout-swing', version:'4.2'
+   implementation group:'net.imagej', name:'ij', version:'1.51g'
+   implementation group:'net.imglib2', name:'imglib2', version:'4.6.1'
+   implementation group:'ome', name:'formats-api', version:'5.8.0'
+   implementation group:'org.apache-extras.beanshell', name:'bsh', version:'2.0b6'
+   implementation group:'org.apache.commons', name:'commons-lang3', version:'3.7'
+   implementation group:'org.apache.commons', name:'commons-math', version:'2.2'
+   implementation group:'org.apache.commons', name:'commons-math3', version:'3.6.1'
+   implementation group:'org.jfree', name:'jcommon', version:'1.0.24'
+   implementation group:'org.jfree', name:'jfreechart', version:'1.0.19'
+   implementation group:'org.openmicroscopy', name:'ome-xml', version:'5.6.2'
+
+   testImplementation group:'junit', name:'junit', version:'4.12'
 
    runtime group:'org.swinglabs', name:'swingx', version:'0.9.5'
 }
@@ -48,21 +49,4 @@ jar {
 
 javadoc {
    exclude '**/internal/**'
-}
-
-mainClassName = 'ij.ImageJ'
-applicationDefaultJvmArgs = [
-   '-Xms512M',
-   '-Xmx2014M',
-   '-XX:MaxDirectMemorySize=4G',
-   '-XX:CICompilerCount=2',
-   '-XX:+UseConcMarkSweepGC',
-   '-XX:MaxGCPauseMillis=67',
-   '-Dsun.java.dpiaware=false',
-]
-
-run {
-   workingDir rootProject.file('stage')
-   systemProperties('mmcorej.library.path':rootProject.file('MMCoreJ_wrap/.libs').getAbsolutePath())
-   args '-eval', 'run("Micro-Manager Studio");'
 }
