--- a/plugins/ASIdiSPIM/build.gradle
+++ b/plugins/ASIdiSPIM/build.gradle
@@ -1,8 +1,7 @@
 dependencies {
+   implementation group:'com.google.code.gson', name:'gson', version:'2.8.0'
    implementation group:'com.miglayout', name:'miglayout-swing', version:'4.2'
-   implementation group:'edu.ucsf.valelab.tsf', name:'tsfproto', version:'1.0.0'
    implementation group:'net.imagej', name:'ij', version:'1.51g'
-   implementation group:'org.apache.commons', name:'commons-math', version:'2.2'
    implementation group:'org.apache.commons', name:'commons-math3', version:'3.6.1'
    implementation group:'org.jfree', name:'jfreechart', version:'1.0.19'
 }
