--- a/plugins/SplitView/build.gradle
+++ b/plugins/SplitView/build.gradle
@@ -1,4 +1,4 @@
 dependencies {
-   implementation project(':mmstudio')
+   implementation group:'com.miglayout', name:'miglayout-swing', version:'4.2'
    implementation group:'net.imagej', name:'ij', version:'1.51g'
 }
