--- a/plugins/Tracker/build.gradle
+++ b/plugins/Tracker/build.gradle
@@ -1,4 +1,4 @@
 dependencies {
-   implementation project(':mmstudio')
    implementation group:'net.imagej', name:'ij', version:'1.51g'
+   implementation group:'org.jfree', name:'jfreechart', version:'1.0.19'
 }
