Run 'swig -java' from Gradle
This has the nice advantage that (on all platforms) Java modules can be
built without having to depend on the C++ build system (whether it is
VC++ or autotools).

In fact, the C++ build system should later be converted to invoke
'../gradlew :MMCoreJ_wrap:mmcorej:runSwig', and we'll finally only have
to maintain one swig invocation (for Java, anyway; Python is simpler
because it only produces one .py file).

The only caveat is that 'swig' must be on 'PATH', but I don't think
that's an unreasonable requirement, even on Windows (especially in this
era of Chocolatey).

--- a/MMCoreJ_wrap/mmcorej/build.gradle
+++ b/MMCoreJ_wrap/mmcorej/build.gradle
@@ -1,5 +1,29 @@
+plugins {
+   id "net.tribe-seven.swig" version "0.1.1"
+}
+
 description = 'The SWIG-generated wrappers for MMCore'
 
 dependencies {
    api project(':MMCoreJ_wrap:taggedimage')
 }
+
+task (runSwig, type:SwigTask) {
+   enableCpp = true
+   module = 'MMCoreJ'
+   packageName = 'mmcorej'
+   source = project.file('../MMCoreJ.i')
+   includePaths = [project.file('../../MMCore')]
+   javaSourcesPath = project.file('src/main/java/mmcorej')
+   wrapperTargetFile = project.file('../MMCoreJ_wrap.cxx')
+}
+
+clean {
+   doFirst {
+      delete runSwig.javaSourcesPath
+      delete project.file('../MMCoreJ_wrap.h')
+      delete project.file('../MMCoreJ_wrap.cxx')
+   }
+}
+
+compileJava.dependsOn runSwig
